[package]
edition = "2021"
name = "persevie_grimoire-css-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
grimoire_css = "1.0.0"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
