[package]
edition = "2024"
name = "grimoire_css_js"
version = "0.0.0"
rust-version = "1.88"
authors = ["Dmitrii Shatokhin <dmtrshatokhin@gmail.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
grimoire_css = "1.5.0"
napi = "3.0.0"
napi-derive = "3.0.0"


[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
